tests/typing/good/testfile-bounds-6.scala

class S[C, B <: C, A <: B] { def foo(a: A, b: B, c: C) { var x: C = a } }
object Main { def main(args: Array[String]) { } }
