tests/typing/bad/testfile-and3-1.scala
class A { def m() { var x: Int = true && true } }
object Main { def main(args: Array[String]) { } }
